[gd_scene load_steps=6 format=3 uid="uid://drwvyi77nkdy6"]

[ext_resource type="Theme" uid="uid://durn6bdwy26ag" path="res://UI/default_theme.tres" id="1_l1hgy"]
[ext_resource type="Script" uid="uid://dg3a1r6rl6bda" path="res://Game/data/tools/building_manager.gd" id="1_q378l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1hgy"]
bg_color = Color(0.0980985, 0.0980985, 0.0980985, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xav2q"]
bg_color = Color(0.470076, 0.470076, 0.470076, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0562916, 0.0562916, 0.0562915, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l1hgy"]

[node name="BuildingManager" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l1hgy")
script = ExtResource("1_q378l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_l1hgy")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="BuildingList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_l1hgy")
theme_override_constants/line_separation = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_l1hgy")
item_count = 2
item_0/text = "Test"
item_1/text = "test 2"

[node name="NewButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create New"

[node name="BuildingData" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_l1hgy")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/BuildingData"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
theme_override_constants/separation = 30

[node name="Id" type="HBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Id"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
text = "Unique Id"

[node name="UniqueId" type="LineEdit" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Id"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_l1hgy")

[node name="Name" type="HBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Name"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
text = "Building Name"

[node name="BuildingName" type="LineEdit" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Name"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_l1hgy")

[node name="Store Icon" type="HBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Store Icon"]
layout_mode = 2
text = "Store Icon"

[node name="StoreIcon" type="TextureRect" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Store Icon"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Factory Tile" type="HBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Factory Tile"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
text = "Factory Tile"

[node name="FactoryTile" type="TextureRect" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Factory Tile"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Drain" type="HBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Drain"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
text = "Energy Drain"

[node name="EnergyDrain" type="LineEdit" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Drain"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("1_l1hgy")

[node name="Cost" type="HBoxContainer" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Cost"]
layout_mode = 2
theme = ExtResource("1_l1hgy")
text = "Money Cost"

[node name="MoneyCost" type="LineEdit" parent="HBoxContainer/BuildingData/MarginContainer/VBoxContainer/Cost"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("1_l1hgy")

[node name="FilenamePopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
transparent_bg = false
title = "Enter Name"
initial_position = 1
size = Vector2i(625, 365)
always_on_top = true
transparent = false
sharp_corners = true
theme_override_styles/panel = SubResource("StyleBoxFlat_xav2q")

[node name="MarginContainer" type="MarginContainer" parent="FilenamePopup"]
offset_left = 5.0
offset_top = 5.0
offset_right = 620.0
offset_bottom = 360.0

[node name="PanelContainer" type="PanelContainer" parent="FilenamePopup/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_l1hgy")

[node name="Label" type="Label" parent="FilenamePopup/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Enter building filename"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="FilenamePopup/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="NewBuildingName" type="LineEdit" parent="FilenamePopup/MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="FilenamePopup/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_l1hgy")

[node name="OKButton" type="Button" parent="FilenamePopup/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="CancelFilename" type="Button" parent="FilenamePopup/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/BuildingList" to="." method="_on_building_list_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="text_submitted" from="FilenamePopup/MarginContainer/PanelContainer/MarginContainer/NewBuildingName" to="." method="_on_new_building_name_text_submitted"]
[connection signal="pressed" from="FilenamePopup/MarginContainer/PanelContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="FilenamePopup/MarginContainer/PanelContainer/HBoxContainer/CancelFilename" to="." method="_on_cancel_filename_pressed"]
